--- a/single-repo.html
+++ b/single-repo.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
   <title>Git it Done</title>
 </head>
 
@@ -22,9 +22,12 @@
   </header>
   
   <main>
-  
-  </main>
+    <div id="issues-container" class="list-group">
 
+
+    </div>
+  </main>
+  <script src="assets/js/single.js"></script>
 </body>
 
 </html>
